--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,9 @@
     ],
     "require": {
         "vlucas/phpdotenv": "^5.6"
+    },
+    "require-dev": {
+        "phpstan/phpstan": "^1.12",
+        "vimeo/psalm": "^5.26"
     }
 }
